[tool.poetry]
name = "keeport"
version = "0.1.0"
description = "another keepassxc to pass importer. "
license = "GPL-2.0-or-later"
authors = ["Idigo Luwum <luwum@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
keeport="keeport.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
